bed management created

--- a/src/app/pages/bed-management/bed-management.component.html
+++ b/src/app/pages/bed-management/bed-management.component.html
@@ -1,7 +1,6 @@
-<div>
-    <div class="row">
-        <div class="col">
-            <button mat-button color="warn">Warn</button>
+
+    
+        <div class="container-fluid text-end  mt-3">
+             <button mat-raised-button  (click)="openDialog()" color="warn">Add Booking</button>
         </div>
-    </div>
-</div>
+   
