--- a/src/layout/footer/footer.component.html
+++ b/src/layout/footer/footer.component.html
@@ -59,16 +59,17 @@
             </div>
         </div>
     </div>
-    <div class="foo">
-    <div class="row">
-        <div class="col-6 mt-3 text-start">
-            <p class="fs-6"> Copyright © ABCDoctors {{year}} All Rights Reserved</p>
+    <div class=" container-fluid foo ">
+    <div class="row g-0">
+        <div class="col-6 g-0 mt-3 text-start">
+            <p class="fs-6"> <small> Copyright © ABCDoctors {{year}} All Rights Reserved</small></p>
         </div>
-        <div class="col-6 text-end mt-3">
-            <img class="btn btn-outline-light rounded-pill p-1 mx-1 btn-social mx-1" href="#" src=".\..\assets\twitter-logo-24.png" alt="twitter-logo-24"><img  class="btn btn-outline-light rounded-pill p-1 mx-1 btn-social mx-1" href="#" src=".\..\assets\instagram-logo-24 (1).png" alt="twitter-logo-24"><img class="btn btn-outline-light rounded-pill p-1 mx-1 btn-social mx-1" href="#" src=".\..\assets\facebook-circle-logo-24.png" alt="twitter-logo-24">
-                    <img  class="btn btn-outline-light rounded-pill p-1 mx-1 btn-social mx-1" href="#"src=".\..\assets\whatsapp-logo-24.png" alt="twitter-logo-24">
+        <div class="col-6 g-0 text-end mt-3">
+            <img class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#" src=".\..\assets\twitter-logo-24.png" alt="twitter-logo-24" style="width:30px ;" height="30px"><img  class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#" src=".\..\assets\instagram-logo-24 (1).png" alt="twitter-logo-24" style="width:30px ;" height="30px"><img class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#" src=".\..\assets\facebook-circle-logo-24.png" alt="twitter-logo-24" style="width:30px ;" height="30px">
+                    <img  class="btn btn-outline-light rounded-pill p-1 mx-1 btn-social mx-1" href="#"src=".\..\assets\whatsapp-logo-24.png" alt="twitter-logo-24" style="width:30px ;" height="30px">
 
         </div>
     </div>
     </div>
+
 </footer>
