--- a/src/account/home/home.component.html
+++ b/src/account/home/home.component.html
@@ -1,19 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light  " style="background-color:rgb(8, 25, 108)">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <img src="https://www.abcteks.com/english/piyanist-media/2019/03/abc_logo_sticky.png" alt="" width="100"
-        height="50" class="d-inline-block align-text-top">
 
-    </a>
-    <form class="d-flex">
-      <button class="btn" routerLink="/login"
-        style="background-color: rgb(235,74,90); color: antiquewhite; border-radius:35px; "><b>Book Appointment
-          >></b></button>
-
-    </form>
-  </div>
-
-</nav>
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -47,6 +32,8 @@
 
         <p style=" font-size: medium; ">ABC is an online healthcare platform supporting the healthcare professionals in
           Managing their appointments .</p>
+          <button class="btn" routerLink="/login"
+        style="background-color: rgb(235,74,90); color: antiquewhite; border-radius:35px; "><b>Book Appointment  <i class="fa fa-arrow-right" aria-hidden="true"></i></b>    </button>
 
       </div>
 
