--- a/src/app/patientform/patientform.component.html
+++ b/src/app/patientform/patientform.component.html
@@ -1,26 +1,20 @@
-<nav class="navbar navbar-light bg-primary">
-    <div class="container-fluid">
-        <span style="text-shadow: 2px 2px  rgb(0, 0, 0); font-family: fantasy;" class="navbar-brand  text-light h1">PATIENT REGISTRATION FORM</span>
-            <button style=" font-family: fantasy;" type="submit" routerLink="/patientlist" class="btn btn-warning mb-0 text-light  btn-lg">Manage Patient</button>
-    </div>
-</nav>
-
 <section class="vh-300" style="background-color: #eee;">
     <div class="container-fluid h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-lg-12 col-xl-11">
                 <div class="card mt-4 text-black" style="border-radius: 25px;">
-                    <div style="background-color: rgb(13, 94, 255);  border-radius: 25px 25px 0px 0px;">
+                    <div style="background-color:rgb(18,55,94);  border-radius: 25px 25px 0px 0px;">
                         <div class="row">
                             <div class=" col-md-6 col-xl-5 col-lg-6" id="hidden">
                                 <img class="ms-5 " src="https://lu.edu.ph/wp-content/uploads/2021/05/Clinic-Logo.png"
                                     alt="" width="80px">
                             </div>
 
-                            <div class="col-sm-12 col-md-6 col-xl-7 col-lg-6 mt-4">
-                                <h1 id="para" class="text-light"
+                            <div class="col-sm-12 col-md-6 col-xl-7 fs-3 col-lg-6 mt-4">
+                                <span id="para" class="text-light " 
                                     style=" color: rgb(255, 255, 255); text-shadow: 2px 2px  rgb(0, 0, 0); font-family: fantasy;">ENTER
-                                        DETAILS!</h1>
+                                        DETAILS!</span>
+                                        <button style=" font-family: fantasy; float: right;" type="submit" routerLink="/patientlist" class="btn btn-warning  me-3 text-light  ">Manage Patient</button>
                             </div>
                         </div>
                     </div>
