--- a/src/account/home/home.component.html
+++ b/src/account/home/home.component.html
@@ -33,7 +33,7 @@
         <p style=" font-size: medium; ">ABC is an online healthcare platform supporting the healthcare professionals in
           Managing their appointments .</p>
           <button class="btn" routerLink="/login"
-        style="background-color: rgb(235,74,90); color: antiquewhite; border-radius:35px; "><b>Book Appointment  <i class="fa fa-arrow-right" aria-hidden="true"></i></b>    </button>
+        style="background-color: rgb(18,55,94); color: white; border-radius:35px; "><b>Book Appointment  <i class="fa fa-arrow-right" aria-hidden="true"></i></b>    </button>
 
       </div>
 
@@ -80,7 +80,7 @@
   <div class="container">
     <div class="row">
 
-      <div class="col-md-6 col-sm-6 col-xs-12 justify align_center h_app_con mt-5 ">
+      <div class="col-md-6 col-sm-6 col-xs-12 justify align_center h_app_con mt-5  ">
         <h1 class="mt-5" style="font-family: segoe UI; "><b>Doctors</b></h1>
 
         <p class=" font-size: medium;">The doctors can easily specify their available days and times to specify when the
@@ -89,7 +89,7 @@
 
       </div>
 
-      <div class="col-md-6 col-sm-6 col-xs-12 mt-5">
+      <div class="col-md-6 col-sm-6 col-xs-12 mt-5 mb-5">
         <img style="border-radius: 50px 0px 50px 0px;" class="img-fluid"
           src="./../../assets/1636_U1RVRElPIEtBVCAzNjctMDU.jpg">
       </div>
