--- a/src/account/signup/signup.component.html
+++ b/src/account/signup/signup.component.html
@@ -1,9 +1,9 @@
-<section class="vh-300" style="background-color: #eee;">
+<section class="vh-300 " style="background-color: #eee; height: 900px;">
     <div class="container-fluid h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-lg-12 col-xl-11">
                 <div class="card mt-4 text-black" style="border-radius: 25px;">
-                    <div style="background-color: rgb(13, 94, 255);  border-radius: 25px 25px 0px 0px;">
+                    <div style="background-color: rgb(18,55,94);  border-radius: 25px 25px 0px 0px;">
                         <div>
                             <h1 id="para" class="text-light text-center mt-3"
                                 style=" color: rgb(255, 255, 255); text-shadow: 2px 2px  rgb(0, 0, 0); "><b>ENTER
