--- a/src/app/pages/admission-list/admission-list.component.html
+++ b/src/app/pages/admission-list/admission-list.component.html
@@ -2,14 +2,14 @@
   <div class="mt-3" mat-dialog-content>
     <mat-form-field appearance="outline">
       <mat-label>Name</mat-label>
-       <input matInput placeholder="Placeholder">
+       <input matInput placeholder="Name">
         <mat-hint></mat-hint>
         </mat-form-field>
     </div>
 <div class="mt-3">
     <mat-form-field appearance="outline">
         <mat-label>Description</mat-label>
-        <input matInput placeholder="Placeholder">
+        <input matInput placeholder="Description">
         <mat-hint></mat-hint>
     </mat-form-field>
 </div>
