--- a/src/layout/footer/footer.component.html
+++ b/src/layout/footer/footer.component.html
@@ -1,75 +1,21 @@
-<footer class="footer pt-5 px-3 pb-3">
-    <div class="container-fluid text-start list-unstyled ">
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4 col-xl-2">
-                <p class="fw-bold">Patient</p>
-                <li> Make an Appointment</li>
-                <li> Book a Check-up</li>
-                <li>International Patients</li>
-                <li> Patient Information</li>
+<footer class="footer  px-3 pb-3">
+    <div class=" container-fluid  ">
+        <div class="row g-0">
+            <div class="col-4 g-0 mt-3 text-start">
+                <p class="fs-6"> <small> Copyright © ABCDoctors {{year}} All Rights Reserved</small></p>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 col-xl-2">
-                <p class="fw-bold">Career Opportunities</p>
-                <li>Continuous Medical Education
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 col-xl-2">
-                <p class="fw-bold"> Specialities</p>
-                <li> Cardiology</li>
-                <li> Gastroenterlology</li>
-                <li> Oncology</li>
-                <li>Diabetology</li>
-                <li>Nephrology</li>
-                <li>Neurology</li>
-                <li>Othopaedics</li>
-                <li>Urology</li>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 col-xl-2">
-                <p class="fw-bold">Ancillaries</p>
-                <li>Intensive Career</li>
-                <li>Laboratory</li>
-                <li>Pharmacy</li>
-                <li>Nutrition</li>
-                <li>Physiotherapy</li>
-                <li>Blood Bank</li>
-                <li>Accident/Emergency</li>
-                <li>Radiology</li>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 col-xl-2">
-                <p class="fw-bold">Wellness Packages</p>
-                <li> Complete Heart Checkup </li>
-                <li> Master Health (MALE)</li>
-                <li> Master Health Checkup</li>
-                <li>Senior Citizen Health</li>
-                <li>POST CABG health Checkup</li>
-                <li> Health & Wellness</li>
-                <li>Expert Opinions</li>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 col-xl-2">
-                <p class="fw-bold"> About the Hospital</p>
-                <li> Chairman's Message</li>
-                <li>Mission & Vision</li>
-                <li>News & Events</li>
-                <li> Awards & Recognition</li>
-                <li>Corporate & Insurance</li>
-                <li>Contact Us</li>
-                <li>Feedback & Enquiry</li>
-                <li>BMW Data</li>
-                <li>Medical Journal</li>
-                
-            </div>
-        </div>
-    </div>
-    <div class=" container-fluid foo ">
-    <div class="row g-0">
-        <div class="col-6 g-0 mt-3 text-start">
-            <p class="fs-6"> <small> Copyright © ABCDoctors {{year}} All Rights Reserved</small></p>
-        </div>
-        <div class="col-6 g-0 text-end mt-3">
-            <img class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#" src=".\..\assets\twitter-logo-24.png" alt="twitter-logo-24" style="width:30px ;" height="30px"><img  class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#" src=".\..\assets\instagram-logo-24 (1).png" alt="twitter-logo-24" style="width:30px ;" height="30px"><img class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#" src=".\..\assets\facebook-circle-logo-24.png" alt="twitter-logo-24" style="width:30px ;" height="30px">
-                    <img  class="btn btn-outline-light rounded-pill p-1 mx-1 btn-social mx-1" href="#"src=".\..\assets\whatsapp-logo-24.png" alt="twitter-logo-24" style="width:30px ;" height="30px">
+            <div class="col-8 g-0 text-end mt-3">
+                <img class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#"
+                    src=".\..\assets\twitter-logo-24.png" alt="twitter-logo-24" style="width:30px ;" height="30px"><img
+                    class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#"
+                    src=".\..\assets\instagram-logo-24 (1).png" alt="twitter-logo-24" style="width:30px ;"
+                    height="30px"><img class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#"
+                    src=".\..\assets\facebook-circle-logo-24.png" alt="twitter-logo-24" style="width:30px ;"
+                    height="30px">
+                <img class="btn btn-outline-light rounded-pill p-1 mx-1 btn-social mx-1" href="#"
+                    src=".\..\assets\whatsapp-logo-24.png" alt="twitter-logo-24" style="width:30px ;" height="30px">
 
+            </div>
         </div>
     </div>
-    </div>
-
 </footer>
