--- a/src/app/patientform/patientform.component.html
+++ b/src/app/patientform/patientform.component.html
@@ -10,11 +10,11 @@
                                     alt="" width="80px">
                             </div>
 
-                            <div class="col-sm-12 col-md-6 col-xl-7 fs-3 col-lg-6 mt-4">
-                                <span id="para" class="text-light " 
+                            <div class="col-sm-12  col-md-6 col-xl-7 fs-5 col-lg-6 mt-4">
+                                <span id="para" class="text-light mx-3" 
                                     style=" color: rgb(255, 255, 255); text-shadow: 2px 2px  rgb(0, 0, 0); font-family: fantasy;">ENTER
                                         DETAILS!</span>
-                                        <button style=" font-family: fantasy; float: right;" type="submit" routerLink="/patientlist" class="btn btn-warning  me-3 text-light  ">Manage Patient</button>
+                                       <span><button style=" font-family: fantasy;" type="submit" routerLink="/patientlist" class="btn  btn-warning  ms-5 text-light  ">Manage Patient</button></span> 
                             </div>
                         </div>
                     </div>
