--- a/src/account/home/home.component.html
+++ b/src/account/home/home.component.html
@@ -1,13 +1,10 @@
-
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://cdn.bangkokhospital.com/2022/09/hero-your-healthcare-intelligence-en.jpg" class="d-block w-100"
-        alt="...">
+      <img src="./../../assets/home1.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="https://www.lordshillhealthcentre.nhs.uk/wp-content/uploads/2020/01/AdobeStock_99549876-768x433.jpeg"
-        class="d-block w-100" alt="...">
+      <img src="./../../assets/Inspirational_quotes_for_nurses-scaled.jpg" class="d-block w-100" alt="...">
     </div>
 
   </div>
@@ -21,7 +18,7 @@
   </button>
 </div>
 
-<section class="tg-main-section tg-haslayout mt-3" style="background-color: #f3fafb;">
+<section class="tg-main-section tg-haslayout " style="background-color: #f3fafb;">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-sm-6 col-xs-12 mt-3">
@@ -32,8 +29,9 @@
 
         <p style=" font-size: medium; ">ABC is an online healthcare platform supporting the healthcare professionals in
           Managing their appointments .</p>
-          <button class="btn" routerLink="/login"
-        style="background-color: rgb(18,55,94); color: white; border-radius:35px; "><b>Book Appointment  <i class="fa fa-arrow-right" aria-hidden="true"></i></b>    </button>
+        <button class="btn" routerLink="/consultancy"
+          style="background-color: rgb(18,55,94); color: white; border-radius:35px; "><b>Book Appointment <i
+              class="fa fa-arrow-right" aria-hidden="true"></i></b> </button>
 
       </div>
 
@@ -76,7 +74,8 @@
     </div>
   </div>
 </section>
-<section id="how-works" class="tg-main-section tg-haslayout padd_70 hw_back  mb=5" style="background-color:rgb(246,246,246)">
+<section id="how-works" class="tg-main-section tg-haslayout padd_70 hw_back  mb=5"
+  style="background-color:rgb(246,246,246)">
   <div class="container">
     <div class="row">
 
@@ -96,3 +95,70 @@
     </div>
   </div>
 </section>
+
+<div class="tg-quicklinks text-light mt-3  " style="background-color:rgb(53,52,52)">
+  <div class="container">
+    <div class="row col-md-12 col-sm-12 col-xs-12 ">
+      <div class="col-md-4 col-sm-4 col-xs-12  mt-5" style="line-height:2.5 ; ">
+        <div class="tg-fcol footercenter_1">
+          <ul class="tg-contactinfo tg-specialities" style="list-style-type: none;">
+            <li><i class="fa fa-phone me-3" aria-hidden="true"></i><span>+91 74186 01346</span></li>
+            <li><i style="font-size:15px" class="fa me-3">&#xf003;</i><span>info@medhos.in</span></li>
+            <li><i class="fa fa-bookmark-o me-3" aria-hidden="true"></i><span>About Us</span></li>
+            <li><i class="fa fa-volume-control-phone me-3" aria-hidden="true"></i><span>Contact Us</span></li>
+          </ul>
+        </div>
+
+
+      </div>
+      <div class="row col-md-4 col-sm-4 col-xs-12 mt-5 ">
+        <div class="tg-fcol tg-arrowicon footercenter_3" style="line-height:2.5 ;">
+          <div class="tg-title  ms-3">
+            <h3><b>For Doctors</b></h3>
+          </div>
+          <ul class="tg-contactinfo  " style="list-style-type: square;">
+            <li>SignIn</li>
+            <li>SignUp</li>
+            <li>FAQ</li>
+          </ul>
+        </div>
+
+
+      </div>
+      <div class="row col-md-4 col-sm-4 col-xs-12 mt-5 ">
+        <div class="tg-fcol tg-arrowicon footercenter_3" style="line-height:2.5 ;">
+          <div class="tg-title  ms-5">
+            <h3><b>Follow us on</b></h3>
+          </div>
+          <ul class="tg-contactinfo  ms-3" style="list-style-type: none;">
+            <img class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#"
+              src=".\..\assets\twitter-logo-24.png" alt="twitter-logo-24" style="width:30px ; height: 30px;"><img
+              class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#"
+              src=".\..\assets\instagram-logo-24 (1).png" alt="twitter-logo-24" style="width:30px ;" height="30px"><img
+              class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#"
+              src=".\..\assets\facebook-circle-logo-24.png" alt="twitter-logo-24" style="width:30px ;" height="30px">
+            <img class="btn btn-outline-light rounded-pill p-1 mx-1 btn-social mx-1" href="#"
+              src=".\..\assets\whatsapp-logo-24.png" alt="twitter-logo-24" style="width:30px ;" height="30px">
+          </ul>
+        </div>
+
+
+      </div>
+
+      <!-- <div class="row col-md-4 col-sm-4 col-xs-12  ">
+         
+            <h3 class="mt-5"><b>Follow us on</b></h3>
+            <img class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#"
+            src=".\..\assets\twitter-logo-24.png" alt="twitter-logo-24" style="width:30px ; height: 30px;" ><img
+            class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#"
+            src=".\..\assets\instagram-logo-24 (1).png" alt="twitter-logo-24" style="width:30px ;" height="30px"><img
+            class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#"
+            src=".\..\assets\facebook-circle-logo-24.png" alt="twitter-logo-24" style="width:30px ;" height="30px">
+          <img class="btn btn-outline-light rounded-pill p-1 mx-1 btn-social mx-1" href="#"
+            src=".\..\assets\whatsapp-logo-24.png" alt="twitter-logo-24" style="width:30px ;" height="30px">
+        </div> -->
+
+    </div>
+
+  </div>
+</div>
