--- a/src/layout/navbar/navbar.component.html
+++ b/src/layout/navbar/navbar.component.html
@@ -1,9 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark py-3" id="brand" style="background-color:rgb(18, 55, 94)">
   <div class="container-fluid">
-   <a class="navbar-brand"  href="#" id="logo">
-    <img src=".\..\assets\hos_logo-removebg-preview.png" alt="" width="30px" height="24px" opacity="1" class="d-inline-block align-text-top">
-   <span class="fw-bold ">ABC</span> 
-  </a>
+    <a class="navbar-brand" href="#" id="logo">
+      <img src=".\..\assets\hos_logo-removebg-preview.png" alt="" width="30px" height="24px" opacity="1"
+        class="d-inline-block align-text-top">
+      <span class="fw-bold ">ABC</span>
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -13,7 +14,7 @@
         <div class="navbar-nav fs-6">
           <a class="nav-link active text-white" aria-current="page" href="#" routerLink="list.link">{{list.label}}</a>
         </div>
-         <li class="nav-item dropdown" *ngIf="list.subItems">
+        <li class="nav-item dropdown " *ngIf="list.subItems">
           <a class="nav-link dropdown-toggle text-white p-0 fs-6 " href="#" id="navbarDropdownMenuLink" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown link
@@ -25,7 +26,14 @@
           </ul>
         </li>
         
+
       </ul>
+      
+     
+     
     </div>
+   
+   
   </div>
+  
 </nav>
