--- a/src/app/pages/workers-list/workers-list.component.html
+++ b/src/app/pages/workers-list/workers-list.component.html
@@ -1,7 +1,7 @@
 <table class=" mt-5  mat-elevation-z8 data-table">
-  <div class="mt-3 d-flex float-start col-md-3 search-div">
+  <!-- <div class="mt-3 d-flex float-start col-md-3 search-div">
   <h1  class="text-success"><b>WORKERS-TABLE</b></h1>
-  </div>
+  </div> -->
     <div class="mt-3 d-flex float-end col-md-3 search-div">
       <input  matInput (keyup)="applyFilter($event)" class="form-control"  placeholder="search">
       
