--- a/src/account/login/login.component.html
+++ b/src/account/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="  " id="login" >
+<div id="login" >
     <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-lg-12 col-xl-11">
             <div class="card text-black mt-5" style="border-radius: 25px;">
