--- a/src/layout/footer/footer.component.html
+++ b/src/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer  px-3 pb-3">
+<footer class="footer fixed-bottom px-3 pb-3">
     <div class=" container-fluid  ">
         <div class="row g-0">
             <div class="col-4 g-0 mt-3 text-start">
