--- a/src/account/consultancy/consultancy.component.html
+++ b/src/account/consultancy/consultancy.component.html
@@ -82,7 +82,7 @@
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4 mt-3">
-                            <img src="../../assets/WhatsApp Image 2022-11-07 at 16.33.42.jpg"
+                            <img src="../../assets/blank-profile-picture-973460_1280.webp"
                                 class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="col-md-8">
