--- a/src/account/login/login.component.html
+++ b/src/account/login/login.component.html
@@ -12,7 +12,7 @@
 
                                 <div class="d-flex flex-row align-items-center mb-4">
                                     <div class="form-outline flex-fill mb-0">
-                                        <label class="form-label" for="form3Example1c">Phone number:</label>
+                                        <label class="form-label" for="form3Example1c">Username:</label>
                                         <input type="text" class="form-control form-control-lg"
                                             formControlName="userName"
                                             [ngClass]="{ 'is-invalid': Submitted && f['userName'].errors || f['userName'].touched&& f['userName'].errors} " />
