--- a/src/account/home/home.component.html
+++ b/src/account/home/home.component.html
@@ -3,8 +3,8 @@
     <div class="carousel-item active">
       <img src="./../../assets/home1.jpg" class="d-block w-100" alt="...">
     </div>
-    <div class="carousel-item">
-      <img src="./../../assets/Inspirational_quotes_for_nurses-scaled.jpg" class="d-block w-100" alt="...">
+    <div class="carousel-item ">
+      <img src="./../../assets/Inspirational_quotes_for_nurses-scaled-edited4.jpg" class="d-block w-100" alt="...">
     </div>
 
   </div>
@@ -21,10 +21,10 @@
 <section class="tg-main-section tg-haslayout " style="background-color: #f3fafb;">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-sm-6 col-xs-12 mt-3">
+      <div class="col-md-6 col-sm-6 col-xs-12 mt-3 order-2 order-lg-1">
         <img class="img-fluid" src="./../../assets/book-my-doctor-in-chennai.png">
       </div>
-      <div class="col-md-6 col-sm-6 col-xs-12 align-middle mt-5 ">
+      <div class="col-md-6 col-sm-6 col-xs-12 align-middle mt-5 order-1 order-lg-2">
         <h1 class="mt-5" style="font-family: segoe UI; "><b>ABC</b></h1>
 
         <p style=" font-size: medium; ">ABC is an online healthcare platform supporting the healthcare professionals in
@@ -32,7 +32,6 @@
         <button class="btn" routerLink="/consultancy"
           style="background-color: rgb(18,55,94); color: white; border-radius:35px; "><b>Book Appointment <i
               class="fa fa-arrow-right" aria-hidden="true"></i></b> </button>
-
       </div>
 
 
@@ -61,10 +60,10 @@
   style="background-color: #f3fafb;">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-sm-6 col-xs-12 mt-5">
+      <div class="col-md-6 col-sm-6 col-xs-12 mt-5 order-2 order-lg-1">
         <img class="img-fluid" src="./../../assets/smsreminder.png">
       </div>
-      <div class="col-md-6 col-sm-6 col-xs-12 justify align_center h_sms_rem mt-5">
+      <div class="col-md-6 col-sm-6 col-xs-12 justify align_center h_sms_rem mt-5 order-1 order-lg-2">
         <h1 class="mt-5" style="font-family: segoe UI; "><b>SMS Reminder</b></h1>
         <p class=" font-size: medium;">ABC will send you prompt reminders about your drug dosages and appointments
           scheduled/to be scheduled. This will ensure that you don’t miss out on medication or visiting your Medical
@@ -79,7 +78,7 @@
   <div class="container">
     <div class="row">
 
-      <div class="col-md-6 col-sm-6 col-xs-12 justify align_center h_app_con mt-5  ">
+      <div class="col-md-6 col-sm-6 col-xs-12 justify align_center h_app_con mt-5">
         <h1 class="mt-5" style="font-family: segoe UI; "><b>Doctors</b></h1>
 
         <p class=" font-size: medium;">The doctors can easily specify their available days and times to specify when the
@@ -111,7 +110,7 @@
 
 
       </div>
-      <div class="row col-md-4 col-sm-4 col-xs-12 mt-5 ">
+      <div class="row col-md-4 col-sm-4 col-xs-12 mt-5 ms-2">
         <div class="tg-fcol tg-arrowicon footercenter_3" style="line-height:2.5 ;">
           <div class="tg-title  ms-3">
             <h3><b>For Doctors</b></h3>
@@ -126,12 +125,12 @@
 
       </div>
       <div class="row col-md-4 col-sm-4 col-xs-12 mt-5 ">
-        <div class="tg-fcol tg-arrowicon footercenter_3" style="line-height:2.5 ;">
+        <div class="tg-fcol tg-arrowicon footercenter_3 " style="line-height:2.5 ;">
           <div class="tg-title  ms-5">
             <h3><b>Follow us on</b></h3>
           </div>
           <ul class="tg-contactinfo  ms-3" style="list-style-type: none;">
-            <img class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#"
+            <img  class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#"
               src=".\..\assets\twitter-logo-24.png" alt="twitter-logo-24" style="width:30px ; height: 30px;"><img
               class="btn btn-outline-light rounded-pill p-1  btn-social mx-1" href="#"
               src=".\..\assets\instagram-logo-24 (1).png" alt="twitter-logo-24" style="width:30px ;" height="30px"><img
