--- a/src/layout/navbar/navbar.component.scss
+++ b/src/layout/navbar/navbar.component.scss
@@ -25,3 +25,84 @@
     padding-top: 0px;
 }
 }
+#navs, #navs:hover {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+  }
+  #nav:hover:after {
+    margin-left: 13px;
+    width: 80%;
+    background: #ffffff;
+  }
+  #nav:after {
+    content: '';
+    display: block;
+    margin: auto;
+    height: 3px;
+    width: 0px;
+    background: transparent;
+    transition: width .5s ease, background-color .5s ease;
+  }
+  #nav {
+    display: inline-block;
+    position: relative;
+    margin-right: 10px;
+  }
+  #nav:last-child {
+    margin-right: 0;
+  }
+  #navbar {
+    overflow: hidden;
+    background-color: #f1f1f1;
+    padding: 90px 10px;
+    transition: 0.4s;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 99;
+  }
+  
+  #navbar a {
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px; 
+    line-height: 25px;
+    border-radius: 4px;
+  }
+  
+  #navbar #logo {
+    font-size: 35px;
+    font-weight: bold;
+    transition: 0.4s;
+  }
+  
+  #navbar a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  #navbar a.active {
+    background-color: dodgerblue;
+    color: white;
+  }
+  
+  #navbar-right {
+    float: right;
+  }
+  
+  @media screen and (max-width: 580px) {
+    #navbar {
+      padding: 20px 10px !important;
+    }
+    #navbar a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    #navbar-right {
+      float: none;
+    }
+  }
